Resolve merge conflicts. Fix issues related XMSS phase 1.